Revision history for {{$dist->name}}

{{$NEXT}}

0.03      2014-10-29 07:52:17 -0400
  - exit instead of die on wrong Perl version at install
    this is an attempt to reduce cpan tester results

0.02      2014-09-22 14:34:22 -0400
  - fix example in documentation

0.01      2014-09-19 09:43:12 -0400
  - initial version