@@ -1,3 +1,2 @@
 ExtUtils::MakeMaker
-POSIX
 Test::More
