@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - use pure perl pow if POSIX is not available
 
 0.03      2014-10-29 07:52:17 -0400
   - exit instead of die on wrong Perl version at install
